@@ -54,6 +54,8 @@ GitHub.
 ==== New Features and Improvements
 
 * The user guide now explains Nested Tests in more detail.
+* New utility method in `TestInstancePreDestroyCallback` helps to ensure all test
+  instances are processed when used in conjunction with `@Nested` tests.
 
 
 [[release-notes-5.7.1-junit-vintage]]
